--- a/styles/Container.module.css
+++ b/styles/Container.module.css
@@ -1,6 +1,6 @@
-  .main {
-    padding: 5rem 0;
-    flex: 1;
+.container {
+    min-height: 100vh;
+    padding: 0 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
